--- a/task-portal/src/main/resources/i18n/messages_en_US.properties
+++ b/task-portal/src/main/resources/i18n/messages_en_US.properties
@@ -1,7 +1,6 @@
 USER_NOT_EXIST=User does not exist
 LOGIN_FAILED=Wrong username or password
 TOKEN_VERIFY_FAILED=Login failed, please login again
-
 # FlinkTaskDiagnosisController
 OPTIMIZE_MEMORY=The total amount of memory the task can optimize
 OPTIMIZE_CORE=The total number of cores that can be optimized by the task
@@ -16,10 +15,8 @@ TASK_ADVICE_PARALLEL=Task recommendation parallel
 TASK_ADVICE_TM_MEM=Task suggestions tm memory
 TASK_ADVICE_TOTAL_MEMORY=Recommended total memory for tasks
 TASK_ADVICE_JM_MEMORY=Task suggestion jm memory
-
 DESC=desc
 ASC=asc
-
 PARALLEL=Parallel
 TM_SLOT_AMOUNT=TM slot amount
 TM_CORE_AMOUNT=TM core amount
@@ -36,39 +33,31 @@ DIAGNOSIS_TM_NUM=Diagnosis TM amount
 METRIC_JOB_NAME=Metric job name
 FLINK_TRACK_URL=Flink track url
 APPLICATION_ID=Application ID
-
 NO_DATA_PERIOD=There is no data in this period
-
 # RunError
-
 LOG_TYPE=Log type
 EVENT=Event
 LOG_TIME=Log time
 LOG_CONTENT=Log content
 ADVICE=advice
-
 # BigTableScan
 HIVE_TABLE=Scanned hive table name
 COLUMNS=Number of scan lines
 THRESHOLD=Threshold
-
 # GlobalSort
 TASK_NUM=Task amount
 DATA_OF_COLUMN=Processing data size
 DURATION=duration
-
 # OOMWarn
 BROADCAST_HIVE_TABLE=Hive table name
 OUTPUT_OF_COLUMNS=Number of output rows after filtering
 MEMORY_USED=Memory used size
-
 # FlinkTaskAnalysisInfo
 JOB_PARALLEL=Job parallel
 JOB_SLOT_AMOUNT=Job slot amount
 JOB_TM_CORE_AMOUNT=Job tm slot amount
 JOB_TM_MEMORY=Job tm memory
 JOB_JM_MEMORY=Job jm memory
-
 # JobInfo
 BROADCAST_USED_MEMORY=Broadcast used memory
 RATIO_MEMORY=Proportion of memory
@@ -77,7 +66,6 @@ BASELINE_END_TIME=Normal end time interval
 LAST_SUCCESSFUL_TIME=Last successful time
 SINCE_NOW=since now
 DAY=day
-
 # CpuWasteService
 CPU_WASTE_CONCLUSION_DESC=Calculation Rules：<br/>&nbsp;  \
   Computing resources used by the app = maximum concurrent vCore * app running time<br/> &nbsp;  \
@@ -89,7 +77,6 @@ CPU_WASTE_CONCLUSION_DESC=Calculation Rules：<br/>&nbsp;  \
 CPU_WASTE_ANALYSIS=CPU Waste Analysis
 CPU_WASTE=Waste
 CPU_EFFICIENT=Efficient
-
 # MemoryWasteService
 MEMORY_WASTE_CONCLUSION_DESC=Memory waste calculation rules::<br/> &nbsp;  \
   Total memory time = executor configuration memory size * number of executors * app running time <br/> &nbsp;  \
@@ -101,7 +88,6 @@ MEMORY_WASTE_CHART_DESC=Peak memory and maximum memory distribution graph of eac
 MEMORY_WASTE_CHART_Y=Memory
 MEMORY_WASTE_CHART_FREE=Free Memory
 MEMORY_WASTE_CHART_PEAK=Peak Memory
-
 # MRMemoryWasteService
 MR_MEMORY_WASTE_CONCLUSION_DESC=Memory waste calculation rules:<br/> &nbsp;  \
   Total memory time = sum(map/reduce configuration memory size * map/reduce running time) <br/> &nbsp;  \
@@ -112,37 +98,29 @@ MR_MEMORY_WASTE_CONCLUSION_INFO=%s allocated memory: <span style=\"color: #e24a4
   peak memory: <span style=\"color: #e24a4a;\">%s</span>,memory waste: <span style=\"color: #e24a4a;\">%s</span>
 MR_MEMORY_WASTE_ANALYSIS=MR Memory Waste Analysis
 MR_MEMORY_WASTE_CHART_DESC=%s peak memory and maximum memory distribution graph
-
 # MemoryOverflowService
 MEMORY_OVERFLOW_ANALYSIS=Memory Overflow Analysis
 MEMORY_OVERFLOW_CONCLUSION=A memory overflow occurred during the running process, please fix the problem according to the key logs and corresponding diagnostic suggestions
 MEMORY_OVERFLOW_CONCLUSION_DESC=Capture related logs of memory overflow in Driver/Executor
-
 # OtherExceptionService
 OTHER_EXCEPTION_ANALYSIS=Error Log Analysis
 OTHER_EXCEPTION_CONCLUSION=An error occurred during the running process, please fix the problem according to the key logs and corresponding diagnostic suggestions
 OTHER_EXCEPTION_CONCLUSION_DESC=Capture error logs in Driver/Executor
-
 # RunErrorBaseService
 RUN_ERROR_CONCLUSION=No exception detected
-
 # ShuffleFailedService
 SHUFFLE_FAILED_ANALYSIS=Shuffle Failed Analysis
 SHUFFLE_FAILED_CONCLUSION=Shuffle process failed, please fix the problem according to the key logs and corresponding diagnostic suggestions
 SHUFFLE_FAILED_CONCLUSION_DESC=Capture the shuffle error log in Driver/Executor
-
 # SqlFailedService
 SQL_FAILED_ANALYSIS=SQL Failed Analysis
 SQL_FAILED_CONCLUSION=A syntax error occurred, please fix the problem according to the key logs and corresponding diagnostic suggestions
 SQL_FAILED_CONCLUSION_DESC=Capture the syntax error log in Driver/Executor
-
 # RunInfoService
 RUN_INFO_CATEGORY_NORMAL=Normal
-
 # BigTableScanService
 BIG_TABLE_SCAN_ANALYSIS=Big Table Scan Analysis
 BIG_TABLE_SCAN_CONCLUSION_DESC=The task of scanning a table with more than %s rows
-
 # DataSkewService
 DATA_SKEW_ANALYSIS=Data Skew Analysis
 DATA_SKEW_CONCLUSION_DESC=The data skew diagnosis rules are as follows: <br/> &nbsp;  \
@@ -165,7 +143,6 @@ DATA_SKEW_CHART_STAGE_DESC=Stage[%s]Reduce task Shuffle Read Records
 DATA_SKEW_CONCLUSION_INFO=job[<span style="color: #e24a4a;">%s</span>].stage[<span style="color: #e24a4a;">%s</span>].task[<span style="color: #e24a4a;">%s</span>]shuffle read data size: <span style="color: #e24a4a;">%s</span> median: %s
 DATA_SKEW_CHART_INFO_NORMAL=Normal Stage
 DATA_SKEW_CHART_INFO_ABNORMAL=Abnormal Stage
-
 # GlobalSortService
 GLOBAL_SORT_ANALYSIS=Global Sort Analysis
 GLOBAL_SORT_CONCLUSION_DESC=Diagnostic rules: <br/>&nbsp;  \
@@ -176,7 +153,6 @@ GLOBAL_SORT_CONCLUSION_DESC=Diagnostic rules: <br/>&nbsp;  \
 GLOBAL_SORT_CONCLUSION_INFO=job[<span style=\"color: #e24a4a;\">%d</span>].stage[<span style=\"color: #e24a4a;\">%d</span>]\
   has only one [<span style=\"color: #e24a4a;\">%d</span>]task,data size: <span style=\"color: #e24a4a;\">%s行</span>,\
   duration: <span style=\"color: #e24a4a;\">%s</span>
-
 # HdfsStuckService
 HDFS_STUCK_ANALYSIS=HDFS Stuck Analysis
 HDFS_STUCK_CONCLUSION_DESC=Calculate the processing rate of each task in the Stage (the ratio of the amount of data read to the time taken). When the ratio of the median to the minimum processing rate is greater than %s, it is determined to be HDFS stuck
@@ -189,18 +165,15 @@ HDFS_STUCK_CONCLUSION_INFO=job[<span style=\"color: #e24a4a;\">%d</span>].stage[
   processing rate: <span style=\"color: #e24a4a;\">%.2f</span>MB/s median: %.2fMB/s
 HDFS_STUCK_CHART_STAGE_NORMAL=Normal Stage
 HDFS_STUCK_CHART_STAGE_ABNORMAL=Abnormal Stage
-
 # JobDurationService
 JOB_DURATION_ABNORMAL_ANALYSIS=Job Duration Abnormal Analysis
 JOB_DURATION_CONCLUSION_DESC=If the ratio of the idle time in the job (total job time - accumulated stage time) to the total time exceeds %s%%, the job is judged to be abnormal duration
 JOB_DURATION_CHART_DESC=Calculation per job - idle time distribution(%s)
 JOB_DURATION_CHART_COMPUTE=Job calculation time
 JOB_DURATION_CHART_IDLE=Job  idle time
-
 # MRBigTableScanService
 MR_BIG_TABLE_SCAN_ANALYSIS=MR Big Table Scan Analysis
 MR_BIG_TABLE_SCAN_CONCLUSION_DESC=The task of scanning a table with more than %s rows
-
 # MRDataSkewService
 MR_DATA_SKEW_ANALYSIS=MR Data Skew Analysis
 MR_DATA_SKEW_CONCLUSION_DESC=The maximum amount of data processed by the task exceeds %sMB, the time exceeds %sms, the maximum/median ratio map exceeds %s or the reduce exceeds %s
@@ -212,7 +185,6 @@ MR_DATA_SKEW_CHART_TASK_DESC=%s task processing data size distribution chart
 MR_DATA_SKEW_CONCLUSION_INFO=%s task[<span style=\"color: #e24a4a;\">%s</span>]\
   data size: <span style=\"color: #e24a4a;\">%s</span>\
   duration: <span style=\"color: #e24a4a;\">%s</span>, median: %s
-
 # MRGCService
 MR_GC_ANALYSIS=MR GC Abnormal Analysis
 MR_GC_CONCLUSION_DESC=Task GC average time/CPU average time ratio map exceeds %s or reduce exceeds %s
@@ -224,13 +196,11 @@ MR_GC_CHART_DESC=%s GC time and CPU time distribution chart
 MR_GC_CHART_Y=duration
 MR_GC_CHART_GC_TIME=GC Time
 MR_GC_CHART_CPU_TIME=CPU Time
-
 # MRSpeculativeTaskService
 MR_SPECULATIVE_ANALYSIS=MR Speculative Analysis
 MR_SPECULATIVE_CONCLUSION_DESC=There are more than %s speculative execution tasks in mapreduce
 MR_SPECULATIVE_CHART_DESC=Speculative task duration
 MR_SPECULATIVE_DURATION=Duration
-
 # MRTaskLongTailService
 MR_LONG_TAIL_ANALYSIS=MR Long Tail Analysis
 MR_LONG_TAIL_CONCLUSION_DESC=The maximum value of task running time exceeds %sms, the maximum/median ratio map exceeds %s or the reduce exceeds %s
@@ -241,11 +211,9 @@ MR_LONG_TAIL_CHART_Y=duration
 MR_LONG_TAIL_CHART_MAX=Max Value
 MR_LONG_TAIL_CHART_MEDIAN=Median Value
 MR_LONG_TAIL_CHART_NORMAL=Normal Value
-
 # OOMWarnService
 OOM_WARN_ANALYSIS=OOM Warn Analysis
 OOM_WARN_CONCLUSION_DESC=If the cumulative memory of the broadcast table accounts for more than 40% of the memory of the driver or executor, it is determined to be an OOM warning
-
 # SpeculativeTaskService
 SPECULATIVE_TASK_ANALYSIS=Speculative Task Analysis
 SPECULATIVE_TASK_CONCLUSION_DESC=If the number of speculative execution tasks in a stage exceeds %s, it can be determined as excessive speculative execution.
@@ -253,14 +221,12 @@ SPECULATIVE_TASK_CHART_DESC=Number of speculative executions per stage
 SPECULATIVE_TASK_CHART_Y=Amount
 SPECULATIVE_TASK_CHART_NORMAL=Normal Stage
 SPECULATIVE_TASK_CHART_ABNORMAL=Abnormal stage
-
 # StageDurationService
 STAGE_DURATION_ANALYSIS=Stage Duration Abnormal Analysis
 STAGE_DURATION_CONCLUSION_DESC=If the ratio of Stage idle time (stage running time - task running time) to stage duration exceeds %s%%, it is determined that the Stage duration is abnormal.
 STAGE_DURATION_CHART_DESC=Each stage compute-idle time distribution(%s)
 STAGE_DURATION_CHART_COMPUTE=Stage compute time
 STAGE_DURATION_CHART_IDLE=Stage idle time
-
 # TaskLongTailService
 TASK_LONG_TAIL_ANALYSIS=Task Long Tail Analysis
 TASK_LONG_TAIL_CONCLUSION_DESC=If the ratio of the maximum task duration to the median value in a Task is greater than %s, it is determined that the task long tail.
@@ -273,30 +239,27 @@ TASK_LONG_TAIL_CHART_MEDIAN=Median Value
 TASK_LONG_TAIL_CHART_NORMAL=Normal Value
 TASK_LONG_TAIL_CHART_STAGE_NORMAL=Normal Stage
 TASK_LONG_TAIL_CHART_STAGE_ABNORMAL=Abnormal Stage
-
 # ReportServiceImpl
-CPU_USAGE_TREND=CPU Usage Trend
-CPU_DIAGNOSIS_TREND=CPU Diagnosis Trend
-CPU_TOTAL_TREND=CPU Total Trend
-MEMORY_USAGE_TREND=MEMORY Usage Trend
-MEMORY_DIAGNOSIS_TREND=MEMORY Diagnosis Trend
-MEMORY_TOTAL_TREND=MEMORY Total Trend
+CPU_USAGE_TREND=CPU Usage
+CPU_DIAGNOSIS_TREND=Diagnostic App CPU
+CPU_TOTAL_TREND=Total App CPU
+MEMORY_USAGE_TREND=Memory Usage
+MEMORY_DIAGNOSIS_TREND=Diagnostic App Memory
+MEMORY_TOTAL_TREND=Total App Memory
 AMOUNT_TREND=Amount Trend
-DIAGNOSIS_JOB=Diagnosis Job
-TOTAL_JOB=Total Job
-CPU_RESOURCE_USAGE_DISTRIBUTION=CPU Resource Usage Distribution
-MEMORY_RESOURCE_USAGE_DISTRIBUTION=MEMORY Resource Usage Distribution
-JOB_AMOUNT_DISTRIBUTION=Job Amount Distribution
-
+DIAGNOSIS_JOB=Diagnostic Jobs
+TOTAL_JOB=Total Jobs
+CPU_RESOURCE_USAGE_DISTRIBUTION=CPU Usage
+MEMORY_RESOURCE_USAGE_DISTRIBUTION=Memory Usage
+JOB_AMOUNT_DISTRIBUTION=Diagnostic Jobs
 # FlinkTaskDiagnosisServiceImpl
-CPU_OPTIMIZE=CPU Can Be Optimized
-CPU_TOTAL_USAGE=CPU Total Usage
-MEMORY_OPTIMIZE=MEMORY Can Be Optimized
-MEMORY_TOTAL_USAGE=MEMORY Total Usage
-JOB_AMOUNT_TREND=Job Amount Trend
+CPU_OPTIMIZE=Optimizable CPU
+CPU_TOTAL_USAGE=Total CPU
+MEMORY_OPTIMIZE=Optimizable Memory
+MEMORY_TOTAL_USAGE=Total Memory
+JOB_AMOUNT_TREND=Jobs
 JOB_AMOUNT_UNIT=Piece
-JOB_AMOUNT_EXCEPTION=Job Exception amount
-
+JOB_AMOUNT_EXCEPTION=Abnormal Jobs
 # JobServiceImpl
 TRY_NUMBER=The %dth try times
 APPLICATION_NOT_EXIST=applicationId does not exist
@@ -322,7 +285,6 @@ OTHER_ERROR=Other Error
 YARN_ERROR=The '%s' exception was detected in the Yarn log. For detailed logs and diagnostic suggestions, please see exception log analysis.
 SCHEDULER_ERROR=The '%s' exception was detected from the scheduling log. For detailed logs and diagnostic suggestions, please see exception log analysis.
 OCCUR=%s occur %s
-
 # OneClickDiagnosisServiceImpl
 UNSUPPORTED_TYPE=%s are not supported yet
 APP_DIAGNOSIS_DONE=The applicationId has been diagnosed
