--- a/task-portal/src/main/resources/i18n/messages_zh_CN.properties
+++ b/task-portal/src/main/resources/i18n/messages_zh_CN.properties
@@ -274,6 +274,8 @@ MEMORY_TOTAL_TREND=总内存消耗数
 AMOUNT_TREND=数量趋势
 DIAGNOSIS_JOB=诊断任务数
 TOTAL_JOB=总任务数
+RESOURCE_DISTRIBUTION=资源分布
+AMOUNT_DISTRIBUTION=数量分布
 CPU_RESOURCE_USAGE_DISTRIBUTION=CPU资源消耗分布
 MEMORY_RESOURCE_USAGE_DISTRIBUTION=内存资源消耗分布
 JOB_AMOUNT_DISTRIBUTION=任务数量分布图
