update: spark i18n report

--- a/task-portal/src/main/resources/i18n/messages.properties
+++ b/task-portal/src/main/resources/i18n/messages.properties
@@ -241,17 +241,17 @@ TASK_LONG_TAIL_CHART_STAGE_NORMAL=Normal Stage
 TASK_LONG_TAIL_CHART_STAGE_ABNORMAL=Abnormal Stage
 # ReportServiceImpl
 CPU_USAGE_TREND=CPU Usage
-CPU_DIAGNOSIS_TREND=Diagnostic App CPU
-CPU_TOTAL_TREND=Total App CPU
+CPU_DIAGNOSIS_TREND=Abnormal CPU
+CPU_TOTAL_TREND=Total CPU
 MEMORY_USAGE_TREND=Memory Usage
-MEMORY_DIAGNOSIS_TREND=Diagnostic App Memory
-MEMORY_TOTAL_TREND=Total App Memory
+MEMORY_DIAGNOSIS_TREND=Abnormal Memory
+MEMORY_TOTAL_TREND=Total Memory
 AMOUNT_TREND=Amount Trend
-DIAGNOSIS_JOB=Diagnostic Jobs
+DIAGNOSIS_JOB=Abnormal Jobs
 TOTAL_JOB=Total Jobs
 CPU_RESOURCE_USAGE_DISTRIBUTION=CPU Usage
 MEMORY_RESOURCE_USAGE_DISTRIBUTION=Memory Usage
-JOB_AMOUNT_DISTRIBUTION=Diagnostic Jobs
+JOB_AMOUNT_DISTRIBUTION=Abnormal Jobs
 # FlinkTaskDiagnosisServiceImpl
 CPU_OPTIMIZE=Optimizable CPU
 CPU_TOTAL_USAGE=Total CPU
